--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.jhkj.videoplayer'
-    compileSdk 33
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.jhkj.videoplayer"
         minSdk 24
-        targetSdk 33
+        targetSdk 35
         versionCode 1
         versionName "1.0"
 
@@ -24,19 +24,25 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = JavaVersion.VERSION_21
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+    def coreVer = "1.13.0"
+    implementation "androidx.core:core:$coreVer"
+    implementation "androidx.core:core-ktx:$coreVer"
+    implementation "androidx.activity:activity-ktx:1.7.0"  // 用于 Activity
+    implementation "androidx.fragment:fragment-ktx:1.6.0"  // 用于 Fragment
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation "com.google.android.material:material:1.8.0"
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation "com.google.android.material:material:1.13.0"
+    implementation 'androidx.core:core-splashscreen:1.0.1'
     implementation project(path: ':gl_player')
 }
