--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext{
+        kotlin_version = "2.1.0"
+    }
+    dependencies {
+        // Gradle 7.0.2 要求的最小 JDK 版本为 11
+        // 支持的最低 SDK 编译版本为 30.0.2
+        classpath 'com.android.tools.build:gradle:8.7.3'
+//        classpath 'com.android.tools.build:gradle:3.2.1'
+        // 使用 kotlin的Gradle插件
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.3.0' apply false
-    id 'com.android.library' version '7.3.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
-    id 'org.jetbrains.kotlin.jvm' version '1.8.0' apply false
+    id 'com.android.application' version '8.7.3' apply false
+    id 'com.android.library' version '8.7.3' apply false
+    id 'org.jetbrains.kotlin.android' version '2.1.0' apply false
+    id 'org.jetbrains.kotlin.jvm' version '2.1.0' apply false
 }
