--- a/gl_player/build.gradle
+++ b/gl_player/build.gradle
@@ -5,11 +5,11 @@ plugins {
 
 android {
     namespace 'com.jhkj.gl_player'
-    compileSdk 33
+    compileSdk 35
 
     defaultConfig {
         minSdk 21
-        targetSdk 33
+        targetSdk 35
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -22,12 +22,12 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
     }
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation "com.google.android.material:material:1.8.0"
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation "com.google.android.material:material:1.13.0"
 }
