--- a/build.gradle
+++ b/build.gradle
@@ -20,4 +20,6 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '2.1.0' apply false
     id 'org.jetbrains.kotlin.jvm' version '2.1.0' apply false
     id "org.jetbrains.kotlin.plugin.compose" version '2.1.0' apply false
+    id "com.google.devtools.ksp" version "2.1.0-1.0.28" apply false
 }
+
