--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,14 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'org.jetbrains.kotlin.plugin.compose'
-    id 'kotlin-parcelize' // 添加这行
 //    id "kotlin-kapt"  // 如果使用 Kotlin 注解处理
     id "com.google.devtools.ksp"
+//    id 'org.jetbrains.kotlin.plugin.compose'
 }
 
 android {
     namespace 'com.jhkj.videoplayer'
-    compileSdk 35
+    compileSdkVersion 36
 
     defaultConfig {
         applicationId "com.jhkj.videoplayer"
@@ -38,31 +37,39 @@ android {
 
     buildFeatures {
         viewBinding true
-        compose true
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+    //腾讯高效底层 protobuf 缓存库 , v1.3.14 是LTS长期支持版本，已兼容16kb page size
+    implementation "com.tencent:mmkv:1.3.14"
 
-    // 核心 Compose 依赖
-    implementation 'androidx.activity:activity-compose:1.8.0' // 用于 Compose 与 Activity 集成
-    implementation 'androidx.compose.ui:ui:1.5.4' // 基础 UI 工具包
-    implementation 'androidx.compose.material3:material3:1.4.0' // Material Design 3 组件
-    implementation 'androidx.compose.ui:ui-tooling-preview:1.5.4' // 预览支持
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.5.4' // 调试工具
-    implementation("androidx.navigation:navigation-compose:2.7.5") //compose 路由导航
+    def version = "3.0.0"
+    implementation "com.github.codyer.ElegantBus:ipc-aidl:$version" // 跨进程时使用（方式2：aidl 实现，已经包含 core）
 
-    // 可选：其他常用扩展库
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2' // ViewModel 支持
-    implementation 'androidx.navigation:navigation-compose:2.7.4' // 导航库
-    implementation 'androidx.compose.material:material-icons-extended:1.5.4' // 图标扩展
+    //Glide框架引入
+    def glideVer = "5.0.5"
+    implementation "com.github.bumptech.glide:glide:$glideVer"
+    implementation "com.github.bumptech.glide:okhttp3-integration:$glideVer"
+    ksp 'com.github.bumptech.glide:compiler:5.0.5'
 
-    def coreVer = "1.13.0"
+
+    implementation "androidx.appcompat:appcompat:1.7.1"
+    implementation "com.google.android.material:material:1.13.0"
+    implementation "androidx.annotation:annotation:1.9.1"
+    implementation "androidx.constraintlayout:constraintlayout:2.2.1"
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.2.0"
+    implementation "androidx.recyclerview:recyclerview:1.4.0"
+    implementation "com.google.android.flexbox:flexbox:3.0.0"
+    implementation "androidx.multidex:multidex:2.0.1"
+
+    def coreVer = "1.17.0"
     implementation "androidx.core:core:$coreVer"
     implementation "androidx.core:core-ktx:$coreVer"
-    implementation "androidx.activity:activity-ktx:1.7.0"  // 用于 Activity
-    implementation "androidx.fragment:fragment-ktx:1.6.0"  // 用于 Fragment
+    implementation "androidx.activity:activity-ktx:1.12.2"  // 用于 Activity
+    implementation "androidx.fragment:fragment-ktx:1.8.9"  // 用于 Fragment
 
 
     def lifecycleVer = "2.6.2"
@@ -92,8 +99,8 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.7.1'
     implementation "com.google.android.material:material:1.13.0"
-    implementation 'androidx.core:core-splashscreen:1.0.1'
-    implementation 'com.google.code.gson:gson:2.11.0'
+    implementation 'androidx.core:core-splashscreen:1.2.0'
+    implementation 'com.google.code.gson:gson:2.13.2'
 
     implementation project(path: ':gl_player')
     implementation project(path: ':webdav')
