--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"
-        tools:ignore="SelectedPhotoAccess" />
+        tools:ignore="PhotoAndVideoPolicy,SelectedPhotoAccess" />
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO"
-        tools:ignore="SelectedPhotoAccess"/>
+        tools:ignore="PhotoAndVideoPolicy,SelectedPhotoAccess"/>
 
     <!-- 获取读写外置存储权限 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        tools:ignore="AllFilesAccessPolicy,ScopedStorage" />
 
     <application
         android:allowBackup="true"
@@ -37,6 +38,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+        <activity
+            android:name=".pages.SelectConnTypeActivity"
+            android:theme="@style/SlideTopBottomTheme"
+            android:configChanges="orientation|screenSize|layoutDirection|locale|uiMode|colorMode"
+            tools:ignore="LockedOrientationActivity"/>
+
+        <activity
+            android:name=".pages.ConnectionEditActivity"
+            android:theme="@style/AppTheme"
+            android:configChanges="orientation|screenSize|layoutDirection|locale|uiMode|colorMode"
+            tools:ignore="LockedOrientationActivity"/>
 
         <activity
             android:name=".player.VideoPlayerActivity"
