--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     dependencies {
         // Gradle 7.0.2 要求的最小 JDK 版本为 11
         // 支持的最低 SDK 编译版本为 30.0.2
-        classpath 'com.android.tools.build:gradle:8.13.0'
+        classpath 'com.android.tools.build:gradle:8.13.2'
 //        classpath 'com.android.tools.build:gradle:3.2.1'
         // 使用 kotlin的Gradle插件
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -15,11 +15,11 @@ buildscript {
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '8.13.0' apply false
-    id 'com.android.library' version '8.13.0' apply false
+    id 'com.android.application' version '8.13.2' apply false
+    id 'com.android.library' version '8.13.2' apply false
     id 'org.jetbrains.kotlin.android' version '2.1.0' apply false
     id 'org.jetbrains.kotlin.jvm' version '2.1.0' apply false
-    id "org.jetbrains.kotlin.plugin.compose" version '2.1.0' apply false
     id "com.google.devtools.ksp" version "2.1.0-1.0.28" apply false
+//    id 'org.jetbrains.kotlin.plugin.compose' version '2.1.0' apply false
 }
 
