--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation "com.github.bumptech.glide:okhttp3-integration:$glideVer"
     ksp 'com.github.bumptech.glide:compiler:5.0.5'
 
+    implementation 'com.airbnb.android:lottie:6.7.1'
 
     implementation "androidx.appcompat:appcompat:1.7.1"
     implementation "com.google.android.material:material:1.13.0"
