--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     ksp 'com.github.bumptech.glide:compiler:5.0.5'
 
     implementation 'com.airbnb.android:lottie:6.7.1'
+    //腾讯高效底层 protobuf 缓存库 , v1.3.14 是LTS长期支持版本，已兼容16kb page size
+    implementation "com.tencent:mmkv:1.3.14"
 
     implementation "androidx.appcompat:appcompat:1.7.1"
     implementation "com.google.android.material:material:1.13.0"
