完成webdav及其它远程文件遍历类的抽象实现，优化播放远程视频卡顿问题及缓冲不显示问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,13 @@
             tools:ignore="LockedOrientationActivity"/>
 
         <activity
+            android:name=".pages.RemoteFilesActivity"
+            android:theme="@style/AppTheme"
+            android:configChanges="orientation|screenSize|layoutDirection|locale|uiMode|colorMode"
+            android:windowSoftInputMode="adjustPan|stateHidden"
+            tools:ignore="LockedOrientationActivity"/>
+
+        <activity
             android:name=".player.VideoPlayerActivity"
             android:theme="@style/AppTheme"
             android:configChanges="orientation|screenSize|layoutDirection|locale|uiMode|colorMode"
